Added cluster controller and view
Click on question id to go to cluster page for that question

--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -174,7 +174,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
   <tr class="todo">
   <% end %>
     <td align="center">
-      <%= link_to question.id, question_path(question) %>
+      <%= link_to question.id, cluster_path(question) %>
     </td>
     <td align="center">
       <b> <%= link_to question.question_index, question_path(question) %> </b>
