--- a/app/views/clusters/show.html.erb
+++ b/app/views/clusters/show.html.erb
@@ -15,7 +15,7 @@
 <%# class_period = ClassPeriod.find_by(id: question.class_period_id) %>
 <%# course = Course.find_by(id: class_period.course_id) %>
 <tr>
-  <td align="center"> <b> <%= question.id %> </b> </td>
+  <td align="center"> <b> <%= link_to question.id, question_path(question.id) %> </b> </td>
   <td align="center"> <%=link_to question.class_period.course.name, course_path(question.class_period.course.id)%>  </td>
   <td align="center"> <%=link_to question.class_period.name, class_period_path(question.class_period.id)   %>  </td>
   <td align="center"> <b> <%= question.question_index %> </b> </td>
