Added link to class period from matching_question table
Navigate to matching question class_period

--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -342,7 +342,7 @@ http://railscasts.com/episodes/324-passing-data-to-javascript
 
         <tr align="center">
           <td>
-            <%= mq.matching_question_id %>
+            <%= link_to mq.matching_question_id, class_period_path(mq.matched_question.class_period.id) %>
           </td>
           <!-- identical -->
           <td class="<%= "bghicol" if mq.match_type == 0 %>">
