fixed small html error

--- a/app/views/class_periods/show.html.erb
+++ b/app/views/class_periods/show.html.erb
@@ -25,7 +25,7 @@
   <td>
     <div class="imagecolumn">
       <img id="dynamic_image" class="myImg"/>
-    <div>
+    </div>
   </td>
 </tr>
 </table>
