turning off ajax calls due to performance bottleneck
The AJAX calls are filling up all of the memory. They are inefficient and somehow should be improved with a join or something like that.

Not sure why after the AJAX call fails, the memory does not seem to be garbage collected on Heroku. Oh well; I guess it's one of those weird dynamic performance issues.

--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,7 +1,9 @@
 <% content_for :title, @course.folder_name %>
-<%= javascript_tag do %>
+<!--
+<% javascript_tag do %>
   window.onload = course_show_load(<%= @course.id %>);
 <% end %>
+-->
 <center>
   <h2>Courses#show</h2>
   <h1> <%= @course.folder_name %> </h1>
