working on code for data controller

--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,4 +1,9 @@
+<div>
 <%= link_to "download data", '/data' %>
+</div>
+<div>
+<%= link_to "download matching data", '/data/match' %>
+</div>
 <!--
 <%= javascript_tag do %>
   window.onload = course_index_load();
